--- a/CreateModal/index.html
+++ b/CreateModal/index.html
@@ -16,13 +16,13 @@
           laborum porro, atque nam dolor nobis in eaque obcaecati maiores
           deleniti.
         </p>
-        <button onclick="OpanModal()">Demo Modal</button>
+        <button onclick="openModal()">Demo Modal</button>
       </div>
       <div id="modal" class="modal-wrap fade">
         <div class="box-modal">
           <div class="modal-header">
             <div class="modal-title">Js Modal</div>
-            <button onclick="ClosModal()" class="clos-icon">x</button>
+            <button onclick="closeModal()" class="close-icon">x</button>
           </div>
           <div class="modal-body">
             <p>Hello World</p>
@@ -40,8 +40,8 @@
             </p>
           </div>
           <div class="modal-footer">
-            <button onclick="ClosModal()">Save</button>
-            <button onclick="ClosModal()">cancel</button>
+            <button onclick="closeModal()">Save</button>
+            <button onclick="closeModal()">cancel</button>
           </div>
         </div>
       </div>
@@ -49,7 +49,7 @@
   </body>
   <script>
     const Mymodal = document.getElementById("modal");
-    OpanModal = function () {
+    openModal = function () {
       document.body.classList.add("modal-open");
       Mymodal.classList.add("show");
       var BackdropElem = document.createElement("div");
@@ -57,7 +57,7 @@
       BackdropElem.id = "BackdropId";
       document.body.appendChild(BackdropElem);
     };
-    ClosModal = function () {
+    closeModal = function () {
       document.body.classList.remove("modal-open");
       Mymodal.classList.remove("show");
       let BackdropId = document.getElementById("BackdropId");
